gtkpod V0.61-CVS
	NEW FEATURE: import of AAC files (.m4a and maybe .m4p) supported,
	provided the mp4v2 library from the mpeg4ip project
	(mpeg4ip.sourceforge.net) is available during the compilation of
	gtkpod. Changing of TAGs is not yet implemented.

gtkpod V0.60
	NEW FEATURE: normalize song volume (using mp3gain). Uses iPod's
	volume adjust feature rather than modifying the mp3 file.

	NEW FEATURE: define format of filename when copying tracks from
	iPod (mainly thanks to Sam Clegg).

	NEW FEATURE: adjust volume of each track individually by using
	iPod's per-track volume adjust feature (implemted through a new
	column in the song view).

	NEW FEATURE: automatically create a playlist for each
	album/artist/genre/composer in your collection (thanks to Chris
	Cutler), and other automatic playlist generations.

	NEW FEATURE: menu items and context menu items to create new
	playlist containing displayed songs or selected songs.

	IMPROVEMENT: Try to press the shift key when dropping songs into a
	playlist to move rather than copy tracks from one playlist to
	another. Keep in mind that songs cannot be moved from or to the
	master play list.

	IMPROVEMENT: better alphabetize interface. Alphabetize settings
	will be remembered, different settings for playlists, sort tabs,
	and tracks possible. Also, clicking the column header three times
	will revert the view to its unsorted state.

	IMPROVEMENT: handle adding of playlist files containing
	files with relative paths.

	IMPROVEMENT: context menus more intuitive, context menus will no
	longer trigger edit mode (most of the time).

	IMPROVEMENT: the function copying songs to the iPod used a "large"
	amount of stack memory (roughly 66000 Bytes) which crashed some
	systems.

	BUGFIX: md5 hash for duplicate detection will examine the same
	number of bytes on all systems now (before it used 4xPATH_MAX).

	BUGFIX: reading and writing of the Composer ID3 tags implemented