@@ -1,8 +1,12 @@
 gtkpod V0.61-CVS
-	NEW FEATURE: import of AAC files (.m4a and maybe .m4p) supported,
+	NEW FEATURE: import of AAC files (.m4a and .m4p) supported,
 	provided the mp4v2 library from the mpeg4ip project
 	(mpeg4ip.sourceforge.net) is available during the compilation of
-	gtkpod. Changing of TAGs is not yet implemented.
+	gtkpod. Writing tags to AAC files is also supported.
+	Unfortunately .m4p files are not played by the iPod. .m4a files
+	work fine.
+
+	BUGFIX: Drag and Drop of files with spaces did not work.
 
 gtkpod V0.60
 	NEW FEATURE: normalize song volume (using mp3gain). Uses iPod's
